render_tests/ui/fail/unclosed-tag.rs
use render::html;

fn main() {
    html! {
      <ul>
        <li>
      </ul>
    };
}
