render_tests/ui/fail/unclosed-tag.stderr
error: Expected closing tag for: <li>
 --> $DIR/unclosed-tag.rs:7:9
  |
7 |       </ul>
  |         ^^
